--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mamãe Tranquila | Para Mães de Primeira Viagem</title>
     <meta name="description" content="Mamãe Tranquila - Descubra o que milhares de mães estão fazendo para viver a maternidade com mais leveza, segurança e amor." />
     <meta name="author" content="Mamãe Tranquila" />
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
